--- a/CSS/index.html
+++ b/CSS/index.html
@@ -1,14 +1,130 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mega-one</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="./styles.css">
-</head>
-<body>
-<div></div>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./styles.css" />
+  </head>
+  <!-- 100 view height to span across the whole screen -->
+  <body class="vh-100">
+    <!-- 100% of the screen size for contents to take up the whole length and width -->
+    <div class="container-fluid h-100">
+      <div class="row h-100">
+        <div class="col-1 p-5 bg-danger position-relative">
+          <!-- Nav hamburger menu -->
+          <a
+            class=""
+            data-bs-toggle="offcanvas"
+            href="#offcanvasExample"
+            role="button"
+            aria-controls="offcanvasExample"
+          >
+            <ion-icon class="h3 text-white" name="menu-outline"></ion-icon>
+          </a>
+          <img class="position-absolute bottom-0 pb-5 translate-middle-x" src="./images/logo.png" alt="">
+          <div
+            class="offcanvas offcanvas-start  h-100"
+            tabindex="-1"
+            id="offcanvasExample"
+            style="float: left"
+            aria-labelledby="offcanvasExampleLabel"
+          >
+            <div class="d-flex flex-column  h-100">
+              <!-- Nav logo -->
+              <div class="offcanvas-header bg-danger pt-5 pb-5 ">
+                <img src="./images/logo.png" alt="" />
+                <button
+                  type="button"
+                  class="btn-close"
+                  data-bs-dismiss="offcanvas"
+                  aria-label="Close"
+                ></button>
+              </div>
+
+              <!-- Nav links -->
+              <div class="offcanvas-body bg-danger pt-5">
+                <div>
+                  <ul class="nav flex-column gap-5">
+                    <li><a class="nav-item text-white h4" href="#">Home</a></li>
+                    <li>
+                      <a class="nav-item text-white h4" href="#">Products</a>
+                    </li>
+                    <li>
+                      <a class="nav-item text-white h4" href="#">Reviews</a>
+                    </li>
+                    <li>
+                      <a class="nav-item text-white h4" href="#">Contact</a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+
+              <div class="offcanvas-body bg-danger">
+                <ul class="nav gap-4">
+                  <li><a class="nav-item text-white h4" href="#"><ion-icon name="logo-facebook"></ion-icon></a></li>
+                  <li>
+                    <a class="nav-item text-white h4" href="#"><ion-icon name="logo-twitter"></ion-icon></a>
+                  </li>
+                  <li>
+                    <a class="nav-item text-white h4" href="#"><ion-icon name="logo-linkedin"></ion-icon></ion-icon></a>
+                  </li>
+                  <li>
+                    <a class="nav-item text-white h4" href="#"><ion-icon name="logo-instagram"></ion-icon></a>
+                  </li>
+                </ul>
+                <p class="text-white h6">
+                  &copy; 2023 MegaOne
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col p-3">
+          <div class="container main">
+            <div class="d-flex justify-content-end">
+              <ul class="nav gap-4">
+                <li><a class="nav-item text-dark h4" href="#"><ion-icon name="logo-facebook"></ion-icon></a></li>
+                <li>
+                  <a class="nav-item text-dark h4" href="#"><ion-icon name="logo-twitter"></ion-icon></a>
+                </li>
+                <li>
+                  <a class="nav-item text-dark h4" href="#"><ion-icon name="logo-linkedin"></ion-icon></ion-icon></a>
+                </li>
+                <li>
+                  <a class="nav-item text-dark h4" href="#"><ion-icon name="logo-instagram"></ion-icon></a>
+                </li>
+              </ul>
+            </div>
+            <div class="row vh-100">
+              <div class="col d-flex flex-column justify-content-center p-5">
+                <h1 class="h1 font-weight-bold">
+                  Premium
+                  <br/>
+                  <span class="text-danger">Air Max Sneakers
+                  </span>
+                </h1>
+                <p class="lead">Lorem ipsum is simply dummy text of the printing and typesetting. Lorem Ipsum has been the industry’s standard dummy.</p>
+                <button class="button">View More</button>
+              </div>
+              <div class="col d-flex flex-column justify-content-center">
+                <div class="product">
+                  <img src="./images/banner-product.png" alt="">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- <div></div>
     <a class="btn btn-danger" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
     </a>
 </div>
@@ -22,7 +138,6 @@
         </div>
         
         <div  class="offcanvas-body bg-danger">
-            
             <ul class="nav flex-column">
               <li><a class="nav-item" href="#">Home</a></li>
               <li><a class="nav-item" href="#">Products</a></li>
@@ -35,7 +150,19 @@
       <col class="container">
         <col class="col">
     <img src="./images/banner-product.png" width="400px"></col>
-      </div>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-</body>
+      </div> -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
+  </body>
 </html>
