--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       <col class="container">
         <col class="col">
     <img src="./images/banner-product.png" width="400px"></col>
-      </div> -->
+      </div> 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
