--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./CSS/style.css" />
   </head>
   <!-- 100 view height to span across the whole screen -->
   <body class="vh-100">
